常用软件应用Docker部署文档（持续更新）

--- a/content/post/常用软件应用离线部署文档（持续更新）.md
+++ b/content/post/常用软件应用离线部署文档（持续更新）.md
@@ -1,29 +1,27 @@
 ---
 date: 2021-01-12T11:04:25+08:00
-title: "常用软件应用离线部署文档（持续更新）"
+description: "常用软件应用离线部署文档（持续更新）"
 featured_image: "/images/常用软件应用离线部署文档（持续更新）.png"
+tags: []
+title: "常用软件应用离线部署文档（持续更新）"
 disable_share: true
 ---
 
 ## JDK
 
-### 介绍
-
 JAVA运行环境
 
-### 步骤
+1. 检查JDK命令 `java -version`
 
-1. 检查JDK命令 java -version
+2. 查询本地 JDK 安装程序情况 `rpm -qa|grep java`
 
-2. 查询本地 JDK 安装程序情况 rpm -qa|grep java
+3. 如果存在老版本的JDK，卸载 `rpm -e -\-nodeps $(rpm -qa|grep java)`
 
-3. 如果存在老版本的JDK，卸载 rpm -e -\-nodeps $(rpm -qa|grep java)
+4. 解压安装包 `tar -zxvf jdk-8u72-linux-x64.tar.gz`
 
-4. 解压安装包 tar -zxvf jdk-8u72-linux-x64.tar.gz
+5. 移动目录 `mv jdk1.8.0_72 /usr/program/`
 
-5. 移动目录 mv jdk1.8.0_72 /usr/program/
-
-6. 编辑配置文件 vi /etc/profile
+6. 编辑配置文件 `vi /etc/profile`
 
     ```shell
     JAVA_HOME=/usr/program/jdk1.8.0_72
@@ -36,10 +34,43 @@ JAVA运行环境
     export CLASSPATH
     ```
 
-7. 激活配置 source /etc/profile
+7. 激活配置 `source /etc/profile`
 
-8. 检查JDK是否安装成功 java -version
-
-### 资源
+8. 检查JDK是否安装成功 `java -version`
 
 [jdk-8u72-linux-x64.tar.gz](https://pan.baidu.com/s/1Zv8QmkPv3AHdpEh8JIdfVw) 提取码：1111
+
+## Nginx
+
+开源Web服务器和反向代理服务器
+
+1. 安装依赖 `rpm -Uvh *.rpm --nodeps --force`
+
+2. 解压安装包 `tar zxvf nginx-1.8.1.tar.gz`
+
+3. 移动目录 `mv nginx-1.8.1/ /usr/program/nginx-1.8.1`
+
+4. 进入解压目录 `cd nginx-1.8.1/`
+
+5. 编译配置 `./configure`
+
+6. 编译 `make`
+
+7. 安装 `make install`
+
+8. 防火墙
+
+    关闭防火墙 `systemctl stop firewalld.service`
+    禁止开机启动 `systemctl disable firewalld.service`
+    查看防火墙状态 `firewall-cmd --state`
+    检查nginx进程 `ps aux | grep nginx`
+
+9. 检查是否监听80端口 `netstat -ntulp | grep 80`
+
+10. 启动 `/usr/local/nginx/sbin/nginx`
+
+11. 停止 `/usr/local/nginx/sbin/nginx -s stop`
+
+12. 重启 `/usr/local/nginx/sbin/nginx -s reload`
+
+[nginx-1.8.1](https://pan.baidu.com/s/1BH1HlBpgkG9wiY2iBxN90A) 提取码：1111
