--- a/content/post/知识融合.md
+++ b/content/post/知识融合.md
@@ -3,6 +3,7 @@ title: "知识融合"
 description: "知识融合包括本体匹配、实体对齐和知识融合"
 date: 2021-01-18T09:00:40+08:00
 featured_image: "/images/知识图谱.png"
+author: "玉龙BB"
 disable_share: true
 ---
 
