--- a/content/post/知识融合.md
+++ b/content/post/知识融合.md
@@ -7,11 +7,25 @@ author: "玉龙BB"
 disable_share: true
 ---
 
+知识融合包括本体匹配、实体对齐和知识融合三个部分。
+
 ## 本体匹配（ontology matching）
 
-实体对齐侧重发现等价或相似的类、属性和关系。
+本体就是定义模板和属性。例如创建一个人物本体，包含姓名、性别、出生日期、身高、体重、父母、子女等属性。
+
+当实体实例匹配到对应本体时，属性集并不会实现完全匹配。
+
+本体之间是相互完全独立的吗？理想化的情况下是独立的，但是现实中由于本体定义的模糊导致会存在同义本体和嵌入本体。例如存在一个国家本体和一个组织本体，机构和组织存在包含
+
+本体融合是将多个知识图谱的概念层级体系进行融合，这一步的关键在于找到等价概念。由于概念层级体系非常重要且规模可控，目前主流的系统主要采用人工的方法进行匹配以保证融合的质量。例如“DBpedia”通过众包的方式为不同语种的知识图谱上的概念建立等价关系，如英文概念“Book”和希腊文概念“βιβλίο”。
+
+然而，不同知识图谱的概念层级体系除了包含等价概念外，还包含各自图谱特有的概念。如概念“玄幻小说”只在中文概念中出现，而不会在其他语言的概念集合中出现。处理上述问题有两种融合策略：一种以“DBpedia”为代表，只以其中一个概念层级体系为主，另一个概念层级体系中特有的概念将被过滤掉；另一种以“XLORE” 为代表，保留所有的概念，只将等价的概念合并。
 
 ## 实体对齐（entity alignment）
+
+实体对齐是在一个本体的目标实例集合中发现指向统一真实实例的组。
+
+实体对齐侧重发现等价或相似的类、属性和关系。
 
 侧重发现真实世界相同对象的不同实例。
 
@@ -19,13 +33,7 @@ disable_share: true
 
 ## 知识融合（knowledge fusion）
 
-### 属性对齐
-
-
-### 属性值对齐
-
 一般通过冲突检测、真值发现等技术消解知识图谱融合过程中的冲突，再对知识进行关联与合并，最终形成一个一致的结果
-
 
 属性与关系的区别
 
@@ -35,8 +43,19 @@ disable_share: true
 
 判断否是attribute还是relation，取决于连接的值的性质（literal or entity)
 
-
 数据预处理是为了解决实体命名不统一的问题，主要方法包括去除实体名称上的标点符号、进行同义词扩展等。
 
 分块是通过启发式策略将不同知识图谱中相似实体分配到相同的块中，减少实体间两两比对的次数。
+
+### 属性对齐（property alignment）
+
+属性对齐是指将不同知识图谱中的等价属性合并为同一属性，通常采用“生成+过滤+验证“的基本思路。
+
+在生成步骤中，为全部属性两两计算相似度，得到候选的等价属性对。常用的方法有基于属性名称的相似性计算（如度量字符串相似度的指标，包括Jaccard系数、Dice系数和编辑距离等）；基于外部同义词词库（如同义词字典和百度汉语等）的方法；基于属性取值相似度（包括属性值集合的相似度和属性值类型的相似度）的方法。在过滤步骤中设计启发式规则，过滤掉其中的错误等价属性对。最后交由人工对最终结果进行验证。对于每个等价属性对，使用两者中出现频次较高的那个属性名称来表示这对等价属性。此外，由于多个知识图谱中存在着大量的等价实体，还可以利用一些统计信息来对齐属性，如属性对应的实体-属性值集合的重叠程度等。
+
+### 属性值融合（value fusion）
+
+在对齐属性后，需要对来自不同知识图谱的同一实体的同一属性的属性值进行合并。融合前首先需要对属性值进行命名规范化，然后根据属性是单值还是多值，分为单值属性融合（如出生日期、性别等）和多值属性融合（如职业、代表作品等）。
+
+单值属性有唯一的属性值，根据这一性质可以利用投票的方法得到最有可能的结果。图3提出了一种基于异构信息网络的真值发现方法，异构信息网络中构建了三类节点，第一类节点为知识图谱，第二类节点为三元组事实，第三类节点为对象（即三元组中的实体-属性对）。每个知识图谱都存在大量的三元组，这些三元组的平均准确率决定了知识图谱的质量，而知识图谱的质量也可以用来估计三元组的准确率。当一个对象存在多个属性值时，如果大多数高质量的知识图谱都支持其中某一属性值，那么这个属性值很可能就是这个对象的真值。
 
